# mini-postgres-operator

./: Dockerfile  README.md  crd.yaml  docker-compose.yaml  example.yaml  push.sh  pyproject.toml  run.sh  secret.yaml  setup.sh
src/mini_pg/: config.py  crd.py  databases.py  kopf.py  passgen.py  secrets.py  templates.py
