[tool.poetry]
name = "mini-postgres-operator"
version = "0.1.0"
description = "A tiny operator for postgres to create new databases inside an existing instance"
authors = ["Tristan Sweeney <sweeneytri@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mini_pg", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
kopf = "^1.36.2"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
psycopg = {extras = ["binary"], version = "^3.1.10"}
kubernetes-asyncio = "^24.2.3"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
